logging system added